SERVER-42204 Make calculation of oplog batch size uninterruptible